<resources>
    <string name="app_name">Keibai</string>
    <string name="title_home">Home</string>
    <string name="title_active_events">Active Events</string>
    <string name="title_activity">Activity</string>
    <string name="title_profile">Profile</string>
    <string name="welcome_text">Welcome to</string>
    <string name="ultimate_auction_app">The Ultimate Auction App</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="create">Create</string>
    <string name="create_event">Create event</string>
    <string name="search">Search</string>
    <string name="welcome_to_keibai">Welcome to Keibai</string>
    <string name="email">Email</string>
    <string name="email_invalid">Invalid email</string>
    <string name="repeat_email">Repeat email</string>
    <string name="repeat_email_invalid">Repeat email invalid</string>
    <string name="password">Password</string>
    <string name="password_invalid">Invalid password</string>
    <string name="cancel">Cancel</string>
    <string name="repeat_password">Repeat password</string>
    <string name="repeat_password_invalid">Repeat password invalid</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_invalid">Last name invalid</string>
    <string name="name">Name</string>
    <string name="name_invalid">Name invalid</string>
    <string name="event_name">Event name</string>
    <string name="event_name_error">Invalid event name</string>
    <string name="event_type">Event type</string>
    <string-array name="event_types_array">
        <item>English</item>
        <item>Combinatorial</item>
    </string-array>
    <string name="location">Location</string>
    <string name="location_error">Invalid location</string>
    <string name="event_time_seconds">Event time (seconds)</string>
    <string name="event_time_seconds_error">Invalid event time</string>
    <string name="category">Category</string>
    <string name="category_error">Invalid category</string>
    <string name="save">Save</string>
    <string name="search_active_events">Search Active Events</string>
    <string name="event_id">Event id</string>
    <string name="event_id_invalid">Invalid event id</string>
    <string name="test">Test</string>
    <string name="auction_name">Auction name</string>
    <string name="auction_name_invalid">Invalid auction name</string>
    <string name="create_auction">Create auction</string>
    <string name="euro">€</string>
    <string name="add">Add</string>
    <string name="bid">Bid</string>
    <string name="transactions">Transactions</string>
    <string name="won">Won</string>
    <string name="minimum_short">Min</string>
    <string name="submit">Submit</string>
    <string name="submitting">Submitting</string>
    <string name="add_credit">Add credit</string>
    <string name="credit_invalid">Invalid credit value</string>
    <string name="auction_type_placeholder">%1$s auction</string>
    <string name="created_at_placeholder">Created %1$s</string>
    <string name="starting_price">Starting price</string>
    <string name="starting_price_invalid">Invalid starting price</string>
    <string name="good_name">Good name</string>
    <string name="good_name_invalid">Invalid good name</string>
    <string name="starting_price_placeholder">Starting at €%1$.2f</string>
    <string name="close">Close</string>
    <string name="start">Start</string>
    <string name="auction_delete">Auction deletion</string>
    <string name="auction_delete_placeholder">Do you want to delete %1$s?</string>
    <string name="winmessage">You have won in Auction %1$s</string>
    <string name="usercreated">Creation Date</string>
    <string name="money_placeholder">€%1$.2f</string>
    <string name="remaining_auction_time_placeholder">%1$d seconds left</string>
    <string name="participate_activity">Participated Activity:</string>
    <string name="personal_statistics">Personal Statistics:</string>
    <string name="auctions_won">auctions won</string>
    <string name="made_bid">total bids</string>
    <string name="max_bid">highest bid</string>
    <string name="auction_user_credit_placeholder">Your credit: €%1$.2f</string>
    <string name="auction_user_credit_not_enough">Not enough credit</string>
    <string name="auction_not_accepted_yet">Auction not accepted yet</string>
    <string name="auction_not_started_yet">Auction not started yet</string>
    <string name="auction_finished">Auction finished</string>
    <string name="ready_start_auction">Ready to start auction</string>
    <string name="available_goods">Available goods</string>
    <string name="selected_goods">Selected goods</string>
    <string name="stop_auction">Press the button to stop the auction</string>
    <string name="ready_stop_auction">Ready to stop auction</string>
    <string name="stop">Stop</string>
    <string name="in_progress_auction_placeholder">In progress auction: %1$s</string>
    <string name="auction_should_be_accepted">Auction should be first accepted</string>
    <string name="bid_msg_placeholder">%1$s bidded %2$.2f</string>
    <string name="auction_finished_without_winners">Auction finished without winners</string>
    <string name="auction_winner_placeholder">Auction finished. %1$s won the auction</string>
    <string name="waiting_resolution_combinatorial">Auction finished. Waiting for a resolution</string>
    <string name="connections_count">%1$d connections</string>
    <string name="na">N/A</string>
</resources>
