<?xml version = "1.0" encoding = "utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height = "match_parent"
    android:orientation="vertical"
    tools:context = ".activities.signin.SignInActivity">

    <EditText
        android:id="@+id/edit_sign_up_name"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:hint = "@string/name" />

    <EditText
        android:id="@+id/edit_sign_up_last_name"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:hint = "@string/last_name" />

    <EditText
        android:id="@+id/edit_sign_up_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/edit_sign_up_repeat_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/repeat_email"/>

    <EditText
        android:id="@+id/edit_sign_up_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/edit_sign_up_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/repeat_password" />

    <Button
        android:id="@+id/button_sign_up_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up" />

</LinearLayout>