<?xml version = "1.0" encoding = "utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height = "match_parent"
    android:orientation="vertical"
    tools:context = ".activities.signin.SignInActivity">

    <EditText
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:hint = "@string/email"
        android:focusable = "true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password" />

    <Button
        android:id="@+id/button_sign_in_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in" />

</LinearLayout>