<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.event.CreateEventActivity"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_create_event"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextColor="@color/colorPrimaryContrast"
            app:theme="@style/AppTheme.ActionBar" />

    </android.support.design.widget.AppBarLayout>

    <EditText
        android:id="@+id/edit_event_create_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_name"/>

    <Spinner
        android:id="@+id/spinner_event_create_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/event_types_array"
        android:prompt="@string/event_type" />

    <EditText
        android:id="@+id/edit_event_create_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category" />

    <EditText
        android:id="@+id/edit_event_create_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"/>

</LinearLayout>
