<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.auction.CreateAuctionActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_create_event"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextColor="@color/colorPrimaryContrast"
            app:theme="@style/AppTheme.ActionBar" />

    </android.support.design.widget.AppBarLayout>

    <EditText
        android:id="@+id/edit_create_auction_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/auction_name" />

    <EditText
        android:id="@+id/edit_create_auction_starting_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/starting_price"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_create_auction_good_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/add_good_button"
            android:hint="@string/good_name" />

        <Button
            android:id="@+id/add_good_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/add" />

    </RelativeLayout>

    <ListView
        android:id="@+id/create_auction_good_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>



</LinearLayout>
