<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_id"
            android:textStyle="italic"
            android:textSize="20sp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp" />

        <TextView
            android:id="@+id/text_event_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:textSize="20sp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/text_event_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="STATUS" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_name"
            android:textStyle="italic"
            android:textSize="20sp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/text_event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textStyle="italic"
            android:textSize="20sp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/text_event_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>