<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.keibai.activities.auction.DetailAuctionCombinatorialBidFragment">

    <!-- Full layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Item selection layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <!-- Available items -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/comb_available_goods_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/available_goods"
                    android:layout_centerHorizontal="true"/>

                <ListView
                    android:id="@+id/comb_available_goods_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/comb_available_goods_text">

                </ListView>

            </RelativeLayout>



            <!-- Selected items -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/comb_selected_goods_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selected_goods"
                    android:layout_centerHorizontal="true"/>

                <ListView
                    android:id="@+id/comb_selected_goods_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/comb_selected_goods_text">

                </ListView>
            </RelativeLayout>

        </LinearLayout>

        <!-- Bid layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/comb_auction_user_credit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auction_user_credit_placeholder"
                android:padding="5dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/comb_bid_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bid" />

                <EditText
                    android:id="@+id/comb_edit_text_bid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="00.01"/>

                <SeekBar
                    android:id="@+id/comb_seek_bar_bid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:max="100"
                    android:progress="50" />

            </LinearLayout>

            <Button
                android:id="@+id/comb_bid_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bid"/>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
